# yoker-assistant

./: .env.example  .gitignore  .readthedocs.yaml  Makefile  README.md  SECURITY.md  STANDARDS.md  TODO.md  pyproject.toml  yoker.toml  yoker.toml.example
.github/workflows/: ci.yml
agents/: assistant.md
analysis/: agent-definition-port-plan.md  api-agent-seam.md  api-loop.md  api-md-to-html-tool.md  api-p1-003-mailbox.md  functional.md  p2-002-003-evaluation.md  plan-revision-r1.md  plan-revision-r2.md  plan-revision-r4.md  plan-revision-r5.md  plan-revision-r6.md  security-agent-definition-port.md  security-agent-seam.md  security-loop.md  security-md-to-html-tool.md  security-p1-002.md  security-p1-003-mailbox.md
docs/: api.md  architecture.md  changelog.md  conf.py  configuration.md  index.md  installation.md  porting-map.md  quickstart.md  security.md  tutorial.md
reporting/bucket-a-hardening/: api-design-review.md  api-review-stage-b.md  completeness-review-stage-e.md  documentation-review-stage-d.md  functional-review-stage-a.md  plan.md  security-design-review.md  security-review-stage-b.md  testing-design-review.md  testing-review-stage-c.md
reporting/p1-001-project-skeleton/: functional-analyst-pr-review.md  functional-analyst-review.md  summary.md  testing-engineer-review.md
reporting/p1-002/: api-architect-review.md  code-reviewer-review.md  consensus.md  end-user-documenter-review.md  functional-analyst-review.md  security-engineer-review.md  summary.md  testing-engineer-review.md
reporting/p1-003/: api-architect-review.md  code-reviewer-review.md  consensus.md  end-user-documenter-review.md  functional-analyst-review.md  security-engineer-review.md  summary.md  testing-engineer-review.md
reporting/p1-004/: consensus.md  functional-review.md  summary.md
reporting/p2-001/: consensus.md  functional-review-r1.md  functional-review-r2.md  functional-review.md  security-review-r1.md  security-review-r2.md  security-review.md  summary.md
reporting/p2-005-006/: api-review.md  consensus.md  functional-review.md  security-review.md  summary.md
reporting/p2-008/: code-review.md  consensus.md  functional-review.md  security-review.md  summary.md  testing-review.md
reporting/p4-001-tutorial/: completeness-review-stage-e.md  documentation-review-stage-d.md  functional-review-stage-a.md  plan.md
src/yoker_assistant/: __init__.py  __main__.py  agent.py  handoff.py  loop.py  mailbox.py  tools.py
tests/: test_import_safety.py  test_loop.py  test_mailbox.py  test_md_to_html.py
