[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yoker-assistant"
version = "0.1.0"
description = "A personal assistant that communicates by email, built on yoker-as-SDK"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Christophe VG", email = "christophe.vg@example.com"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
keywords = ["yoker", "agent", "email", "assistant"]
dependencies = [
  "yoker",
  "simple-email-gw",
  "pkgq",
]

[project.optional-dependencies]
docs = [
  "sphinx>=7.0.0",
  "sphinx-rtd-theme>=2.0.0",
  "myst-parser>=2.0.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pytest-asyncio>=0.23.0",
  "mypy>=1.13.0",
  "ruff>=0.8.0",
  "tox>=4.0.0",
  "tox-uv>=1.0.0",
  "build>=1.0.0",
  "twine>=6.0.0",
  "coveralls>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/christophevg/yoker-assistant"
Documentation = "https://yoker-assistant.readthedocs.io/"
Repository = "https://github.com/christophevg/yoker-assistant"
Issues = "https://github.com/christophevg/yoker-assistant/issues"

[project.scripts]
yoker-assistant = "yoker_assistant.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yoker_assistant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["yoker.*", "simple_email_gw.*", "pkgq.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
indent-width = 2

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["yoker_assistant"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]

[tool.tox]
env_list = ["py311"]

[tool.tox.env_run_base]
description = "run tests with pytest"
skip_install = false
commands_pre = [
  ["uv", "pip", "install", "-e", "."],
  ["uv", "pip", "install", "pytest", "pytest-cov", "pytest-asyncio"],
]
commands = [["pytest", "tests", "-v", "--cov=yoker_assistant", "--cov-report=term-missing"]]